--- a/Frontends/WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/WebUI/Views/_ViewImports.cshtml
@@ -7,5 +7,6 @@
 @using Frontends.Dtos.CarDtos;
 @using Frontends.Dtos.FooterAddressDtos;
 @using Frontends.Dtos.BlogDtos;
+@using Frontends.Dtos.CarPricingDto;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
